<resources>
    <string name="app_name">MovieApp</string>

    <!--For Setting Activity -->
    <string name="action_settings">Settings</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="favorite">Favorite Movies</string>

    <string name="pref_sortOrder_title">Sort Movies By:</string>
    <string name="pref_sort_summary">Choose an order to sort movies according.</string>

    <!-- For Main Activity -->
    <string name="movies_display_message">Movies will Display</string>
    <string name="empty_apikey_message">API Key is empty, Please obtain API Key first</string>
    <string name="error_fetching_data_message">Error Fetching Data from api please try another time!</string>


    <!--For Detail Activity-->
    <string name="movie_original_title">Movie Original Title: </string>
    <string name="movie_user_rating">User Rate: </string>
    <string name="movie_release_date">Release Date: </string>
    <string name="movie_popularity">Popularity: </string>
    <string name="movie_overview">Overview: </string>
    <string name="trailer_title">Trailers : </string>
    <string name="reviews_title">Reviews :</string>

    <string name="no_internet_network">No internet connection</string>
    <string name="connection_error">Connection Error</string>


    <string name="add_favorite">Added to Favorite Movies List</string>
    <string name="remove_favorite">Removed from Favorite Movies List </string>


    <!--Movie Card-->
    <string name="Movie_Title">Movie Title</string>

    <!--Trailer Card-->
    <string name="trailer_no_lb">Trailer No : </string>
    <string name="trailer_name">Video Trailer Name</string>

    <!--Review Card-->
    <string name="review_no_lb">Review No : </string>
    <string name="review_author_lb">Author Name:</string>
    <string name="review_content_lb">The Review :</string>
    <string name="review_url_lb">View Full Review: </string>
    <string name="review_author">Review Author</string>
    <string name="review_content">Review Content</string>
    <string name="review_url">Review URL</string>
</resources>
